# qjsonsettings

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  example.cpp
src/: CMakeLists.txt  qjsonsettings.cpp  qjsonsettings.h
tests/: CMakeLists.txt  tst_qjsonsettings.cpp
