cmake_minimum_required(VERSION 3.16)

project(qjsonsettings VERSION 0.0.1.2 LANGUAGES CXX)

option(QJSONSETTINGS_BUILD_TESTS "Build tests" OFF)

if(NOT DEFINED CMAKE_RUNTIME_OUTPUT_DIRECTORY)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin)
endif()

if(NOT DEFINED CMAKE_LIBRARY_OUTPUT_DIRECTORY)
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lib)
endif()

if(NOT DEFINED CMAKE_ARCHIVE_OUTPUT_DIRECTORY)
    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lib)
endif()

add_subdirectory(src)

if(QJSONSETTINGS_BUILD_TESTS)
    add_subdirectory(tests)
endif()